# test-streamlit-app-deployment-on-azure-app-service

./: .pdm-python  app.py  pyproject.toml  requirements.txt
.github/workflows/: main_first-streamlit-app.yml  main_test-hello-world.yml
utilities/: az_login.py  chat_with_pdf.py  config.py  create-product-index.py  create_search_index.py  delete_search_index.py  evaluate.py  list-search-index.py
utilities/assets/: grounded_chat.prompty
